2024-07-12 19:04 Tested conversion pdf

--- a/src/main/webapp/document.html
+++ b/src/main/webapp/document.html
@@ -1,11 +1,8 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
-
 <!DOCTYPE html>
 <html>
 <head>
 <meta charset="UTF-8">
-<title>js-document</title>
+<title>document-html</title>
 <style>
 	body {
 		margin: 0;
@@ -354,7 +351,4 @@
 		</div>
 	</section>
 </body>
-<script src="/webjars/jquery/3.7.1/jquery.min.js"></script>
-<script>
-</script>
 </html>
