2024-07-16 23:50 Created uploading function

--- a/src/main/webapp/simple1.html
+++ b/src/main/webapp/simple1.html
@@ -5,6 +5,6 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<div>src/main/webapp/simple.html</div>
+	<div>src/main/webapp/simple1.html</div>
 </body>
 </html>
